# airflow

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  requirements.txt
.deploy/: entrypoint.sh
.deploy/config/: nginx.conf  supervisor.conf
.develop/: Dockerfile  entrypoint.sh
.develop/airflow/: Dockerfile  entrypoint.sh
.develop/config/: supervisor.conf  supervisord.conf
app/: manage.py  pyproject.toml  requirements.txt
app/app/: asgi.py  celery.py  celery_app.py  settings.py  wsgi.py
app/core/: admin.py  models.py
app/core/management/commands/: call_cigam.py  makemigrations.py  wait_for_redis.py
app/core/migrations/: 0001_initial.py  0002_initial_users.py
app/core/services/: base.py  cigam_client.py  live_pro_client.py
app/core/tests/: test_commands.py  test_models.py
app/finance/: models.py  tasks.py
app/finance/dags/: finance_pipeline.py
app/finance/services/: finance_service.py
app/store/: admin.py  apps.py  models.py
app/store/services/: import_stores.py
app/tasks/: schedules.py  tasks.py  views.py
